project(demo)
set(TARGET_NAME demo)
file(GLOB source_files "*.h" "*.cpp")
if (MSVC)
  add_executable(${PROJECT_NAME} ${source_files})
else()
  add_executable(${PROJECT_NAME} ${source_files})
endif()

target_compile_definitions(${PROJECT_NAME} PUBLIC RESOURCE_PATH="${CMAKE_SOURCE_DIR}/resources/")
link_personal_libraries(render input core ui)
